# SteinerForestProblemSolver

./: .gitignore  CMakeLists.txt  README.md  main.cpp
algorithms/: GRASP_Constructive.cpp  Solver.hpp  algorithms.hpp  amvns.cpp  constructive.cpp  dijkstra.cpp  grasp_constructive.cpp  localSearch.cpp
data/: README.md
experiments/: all_0.md  all_1.md  incidence_I080_0.md  incidence_I160_1.md  incidence_I160_v.md  incidence_I640_v.md  wireRouting_0.md  wireRouting_1.md
experiments/v1.0/: all_v.md  incidence_I080_1.md  incidence_I080_v.md  incidence_I160_0.md  incidence_I320_0.md  incidence_I320_1.md  incidence_I320_v.md  incidence_I640_0.md  incidence_I640_1.md  random_0.md  random_1.md  random_v.md  wireRouting_v.md
experiments/v2.0/: I080.md  I160.md  I320.md  I640.md  Random.md  Sparse-Graphs.md  exec_tests.sh
experiments/v3.0/: Random.md  Sparse-Graphs.md  exec_tests.sh
experiments/v4.5/: analytical_result.csv  instances_characteristics.csv  instances_info.py  results_analysis.ipynb  run_benchmark.py
models/: SFP.cpp  SFP.hpp  neighbourhood.cpp  problem.cpp  solution.cpp
tests/: GRASP_Constructive.cpp  SFP.cpp  Tests.hpp  biddijkstra.cpp  constructive.cpp  dijkstra.cpp  dsu.cpp  graph.cpp  grasp_constructive.cpp  localSearch.cpp  sfp.cpp  tests.hpp
tuning/AMVNS/: parameters.txt  scenario.txt  target-runner
tuning/FixAlpha/AMVNS/: log_amvns.txt  scenario.txt  target-runner
tuning/FixAlpha/GRASP/: instances.txt  log_grasp.txt  parameters.txt  target-runner
tuning/GRASP/: log_grasp.txt  scenario.txt  target-runner
tuning/HUB/: log_hub.txt  parameters.txt  target-runner
tuning/VarAlpha/AMVNS/: log_amvns.txt  parameters.txt  target-runner
tuning/VarAlpha/GRASP/: log_grasp.txt  parameters.txt  scenario.txt  target-runner
utils/: BidDijkstra.hpp  DSU.hpp  Dijkstra.hpp  Graph.cpp  Graph.hpp  ReportGenerator.cpp  ReportGenerator.hpp  graph.cpp  graph.hpp  report_generator.cpp  report_generator.hpp
